# project_translation

./: .gitignore  README.md
cantran/: .gitignore  G_GUNDAM_EP17 copy.srt  G_GUNDAM_EP17.srt  pyproject.toml
cantran/config/: default.toml
cantran/scripts/: download_models.py
cantran/src/cantran/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py  types.py  utils.py
cantran/src/cantran/stages/: capture.py  mux.py  postprocess.py  preprocess.py  transcribe.py  translate.py  tts.py
cantran/tests/: conftest.py  test_capture.py  test_transcribe.py  test_translate.py  test_tts.py
dictionaries/Char_s_Counterattack/: dont_translate.csv  force_translate.csv
dictionaries/Chiikawa/: chiikawa_dont_translate.csv  chiikawa_force_translate.csv
dictionaries/G_Gundam/: g_gundam_dont_translate.csv  g_gundam_force_translate.csv
dictionaries/Gundam_IBO/: ibo_dont_translate.csv  ibo_force_translate.csv
dictionaries/Gundam_Requiem/: Gundam Requiem for Vengeance dont_translate.csv  Gundam Requiem for Vengeance force_translate.csv
dictionaries/Hathaway/: hathaway_dont_translate.csv  hathaway_force_translate.csv
jpnsubt/: .gitignore  IMPLEMENTATION.md  pyproject.toml
jpnsubt/config/: default.toml
jpnsubt/src/jpnsubt/: __init__.py  __main__.py  cli.py  config.py  preprocess.py  subtitle.py  transcribe.py
media/G_GUNDAM/: G_ep29.srt
